Changed the way the app works so its more user-friendly. Now you can bulk-select a bunch of scripts and apply/revert them all at the same time!

--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
       {
         "from": "scripts/",
         "to": "scripts/",
-        "filter": ["**/*.exe"]
+        "filter": [
+          "**/*.exe"
+        ]
       }
     ],
     "files": [
       "main.js",
       "preload.js",
       "index.html",
-      "assets/**"
+      "assets/**",
+      "files/**"
     ]
   },
   "devDependencies": {
